--- a/index.html
+++ b/index.html
@@ -1,34 +1,35 @@
 <!DOCTYPE html>
 <html lang="en" class="nojs">
 <head>
-  <title>Lab 3</title>
+  <title>HTML Form Elements</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,shrink-to-fit=no" />
-  <link rel="stylesheet" media="screen" href="screen.css" />
+  <link rel="stylesheet" media="screen" href="css/screen.css" />
 </head>
 <body>
 <main id="content">
   <form method="get" action="#null">
-    <h1> Sweepstakes Entry </h1>
-    <p> Fill out this form to be entered for a Sweepstakes! </p>
+    <h1>Get Our Newsletter</h1>
+    <p>
+      Sign up to be first to receive the lastest news
+      and breaking alerts right in your inbox.
+    </p>
     <ol>
-      <li>
-        <label for="email"> Email: </label>
-        <input type="email" name="email" id="email" placeholder="what@ever.com" />
+      <li id="input-email">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email" pattern="^.+@.+$" />
       </li>
-      <li>
-        <label> Number: </label>
-        <input type="phone" name="number" placeholder="111-222-3333" />
+      <li id="input-age-verification">
+        <input type="checkbox" id="age-verification" name="age-verification" value="18" />
+        <label for="age-verification">I am 18 years of age or older and there is no denying that this is true</label>
       </li>
-      <li>
-        <label> DOB: </label>
-        <input type="date" name="DOB" />
-      </li>
-      <li>
-        <input type="submit" name="submit" id="submit" value="Enter Here" />
+      <li id="input-submit">
+        <input type="submit" name="submit" id="submit" value="Subscribe" />
       </li>
     </ol>
   </form>
 </main>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script src="js/site.js"></script>
 </body>
 </html>
